# Phoenixpp

./: .gitignore  CMakeLists.txt  README.md
Phoenixpp/: Ball.h  Phoenixpp.pro  main.cpp  protobuf_files.h  widget.cpp  widget.h  widget.ui
Phoenixpp-cmake/: CMakeLists.txt  sla.txt
Phoenixpp-cmake/configurations/: elomectester.json  grsimvision.json  main_settings.json  realgamevision.json  settings.json  testlogic.json  udpcommunicator.json
Phoenixpp-cmake/data/: PhoenixppModel.mdj
Phoenixpp-cmake/implementations/: CMakeLists.txt
Phoenixpp-cmake/implementations/logic/: CMakeLists.txt
Phoenixpp-cmake/implementations/logic/test_logic/: test_logic.cpp  test_logic.h
Phoenixpp-cmake/implementations/user_interface/: CMakeLists.txt
Phoenixpp-cmake/implementations/user_interface/command_line_ui/: CMakeLists.txt  cli.cpp  cli.h
Phoenixpp-cmake/implementations/vision/: CMakeLists.txt
Phoenixpp-cmake/implementations/vision/test_vision/: test_vision.cpp  test_vision.h
Phoenixpp-cmake/proto/: CMakeLists.txt  protobuf_files.h
Phoenixpp-cmake/src/: CMakeLists.txt  cli.cpp  cli.h  main.cpp  main_cli.cpp  main_gui.cpp
Phoenixpp-cmake/src/components/: CMakeLists.txt  base_component.cpp  base_component.h  dummy_component.cpp  dummy_component.h  parameters_manager.h
Phoenixpp-cmake/src/components/implementations/: CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/communicator/: CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/communicator/udp_communicator/: CMakeLists.txt  udp_communicator.cpp  udp_communicator.h
Phoenixpp-cmake/src/components/implementations/filters/: CMakeLists  CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/filters/kalman_filter/: CMakeLists.txt  kalmanfilter.cpp  kalmanfilter.h  kalmanstateestimator1d.cpp  kalmanstateestimator1d.h  kalmanstateestimator3d.cpp  kalmanstateestimator3d.h  roboime_time.cpp  roboime_time.h  time.cpp  time.h
Phoenixpp-cmake/src/components/implementations/logic/: CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/logic/test_logic/: CMakeLists.txt  test_logic.cpp  test_logic.h
Phoenixpp-cmake/src/components/implementations/navigation/: CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/navigation/elo_mec_tester/: CMakeLists.txt  elo_mec_tester.cpp  elo_mec_tester.h
Phoenixpp-cmake/src/components/implementations/vision/: CMakeLists.txt
Phoenixpp-cmake/src/components/implementations/vision/test_vision/: CMakeLists.txt  test_vision.cpp  test_vision.h
Phoenixpp-cmake/src/components/implementations/vision/udp_vision/: CMakeLists.txt  grsim_vision.cpp  grsim_vision.h  real_game_vision.cpp  real_game_vision.h  udp_vision.cpp  udp_vision.h
Phoenixpp-cmake/src/components/messages/: CMakeLists.txt  dummy_message.h  environment.h  raw_environment.h  robot_commands.h  robot_decision.h  robot_path.h
Phoenixpp-cmake/src/factories/: CMakeLists.txt  component_factory.cpp  component_factory.h
Phoenixpp-cmake/src/filters/kalman_filter/: kalmanfilter.cpp  kalmanfilter.h
Phoenixpp-cmake/src/user_interfaces/: CMakeLists.txt  base_ui.cpp  base_ui.h
Phoenixpp-cmake/src/user_interfaces/command_line_ui/: CMakeLists.txt  cli.cpp  cli.h
Phoenixpp-cmake/src/user_interfaces/graphical_ui/: CMakeLists.txt  gui.cpp  gui.h  main_window.cpp  main_window.h  mainwindow.ui
Phoenixpp-cmake/src/utils/: CMakeLists.txt  parameters_manager.cpp  parameters_manager.h  udp_receiver.cpp  udp_receiver.h  udp_sender.cpp  udp_sender.h
Phoenixpp-cmake/utils/: CMakeLists.txt
Phoenixpp-cmake/utils/components/: CMakeLists.txt  base_component.cpp  base_component.h  base_ui.h  parameters_manager.cpp  parameters_manager.h
Phoenixpp-cmake/utils/interfaces/: CMakeLists.txt  communicator.h  logic.h  referee.h  robot_feedback.h  vision.h
Phoenixpp-cmake/utils/messages/: environment.h  robot_feedback_data.h
Phoenixpp-cmake/utils/structs/: CMakeLists.txt  environment.h  referee_commands.h
Phoenixpp/fieldClass/: Field.cpp  Field.h
Phoenixpp/proto/: compile.sh
apps/: Phoenixpp.cpp
apps/PhoenixCLI/: PhoenixCli.cpp
build-Phoenixpp-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Phoenixpp  build.ninja  cmake_install.cmake
build-Phoenixpp-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Phoenixpp-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Phoenixpp-Desktop_Qt_6_6_0_GCC_64bit-Debug/Phoenixpp_autogen/: deps
build-Phoenixpp-Desktop_Qt_6_6_0_GCC_64bit-Debug/Phoenixpp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
config/: main_settings.json  test_settings.json
docs/: GeneralClassesDescription.puml  Phoenixpp.puml
docs/diagramas/: ai.plantuml  sequence.plantuml
docs/messaging/: AllMessages.puml  SimpleCaseMessaging.puml  TwoPusblishersMessaging.puml
docs/stp/: ai.puml
futuroGUI/: Ball.cpp  Ball.h  Robot.cpp  Robot.h  SoccerField.cpp  SoccerField.h  luckwu.pro  main.cpp  mainwindow.cpp  mainwindow.h
include/Phoenixpp/: base_component.h  base_ui.h
proto/: messages_robocup_ssl_geometry.proto
resources/qt/: field_widget.ui  gui.ui
src/: CMakeLists.txt  base_component.cpp  base_ui.cpp
src/ai/: strategy.cpp
src/ai/stp/: PlaySelection.cpp  stp.cpp
src/core/: agent.cpp  agent_controller.cpp
src/factories/: agent_factory_registry.cpp  listener_factory.cpp  referee_factory.cpp  strategy_factory.cpp  vision_factory.cpp
src/io/: json_parameters_manager.cpp  replay_loader.cpp  replay_recorder.cpp  serial_receiver.cpp  serial_transmitter.cpp  udp_handler.cpp  udp_receiver.cpp  udp_transmitter.cpp
src/messaging/: listener.cpp  message.cpp  message_collection.cpp  message_listener.cpp  message_publisher.tpp  message_wrapper.tpp  publisher.cpp
src/qt/: field_widget.cpp  gui.cpp
src/referee/: referee.cpp  ssl_referee.cpp
src/vision/: filter.cpp  ssl_vision.cpp  test_vision.cpp  vision.cpp
tests/: CMakeLists.txt
tests/core/: test_core.cpp
tests/messaging/: test_environment.cpp  test_message_listener.cpp
tests/vision/: test_udp_vision.cpp
(+300 files in other folders)
