add_library(TestLogic test_logic/test_logic.h test_logic/test_logic.cpp)
target_include_directories(TestLogic PRIVATE ${CMAKE_SOURCE_DIR}/utils/components)
target_include_directories(TestLogic PRIVATE ${CMAKE_SOURCE_DIR}/utils/messages)
target_link_libraries(TestLogic PRIVATE nlohmann_json)
target_link_libraries(TestLogic PRIVATE Components)