add_library(Cli cli.h cli.cpp)
target_include_directories(Cli PUBLIC ${CMAKE_SOURCE_DIR}/src/components)
target_include_directories(Cli PUBLIC ${CMAKE_SOURCE_DIR}/src/factories)
# set_target_properties(Cli PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(Cli PUBLIC nlohmann_json)
target_link_libraries(Cli PUBLIC Factories)
target_link_libraries(Cli PUBLIC BaseUi)