add_library(Gui gui.cpp gui.h)
target_include_directories(Gui PUBLIC ${CMAKE_SOURCE_DIR}/src/components)
target_include_directories(Gui PUBLIC ${CMAKE_SOURCE_DIR}/src/factories)
# set_target_properties(Gui PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(Gui PUBLIC nlohmann_json)
target_link_libraries(Gui PUBLIC Factories)
target_link_libraries(Gui PUBLIC BaseUi)
